<resources>
    <string name="app_name">Lasone</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="terms">I read and accept the license terms</string>
    <string name="errorTerms">Accept the terms to create your account</string>
</resources>
